[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = ""
authors = ["Orestis Gkorgkas <orestis.gorgas@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3= "1.26.117"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
#assertpy = "1.1"


[tool.pytest.ini_options]
python_files = "*test.py"
python_classes = "*Test"
python_functions = "test_*"
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["."]
